2013-11-30  Junichi Satoh  <junichi@rworks.jp>

	* operation/tree.php, operation/agentes/datos_agente.php,
	operation/reporting/reporting_viewer.php, 
	operation/reporting/graph_viewer.php: Added missing extension for
	jquery-ui-timepicker.

2013-11-30  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_treeview.php: Fixed tree expansion failure in
	module based tree view when module name includes some symbols.

2013-11-28  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css
	mobile/operation/networkmap.php
	mobile/operation/home.php
	mobile/operation/modules.php
	mobile/operation/alerts.php
	mobile/operation/networkmaps.php
	mobile/operation/agent.php
	mobile/operation/groups.php
	mobile/operation/agents.php
	mobile/operation/events.php
	mobile/operation/tactical.php: General improvements
	in mobile console. Cut some large strings, style fixes,
	back button path fix to iPhone app...

2013-11-27  Sergio Martin <sergio.martin@artica.es>

	* images/hourglass_dark.png
	images/star_white.png
	images/star_dark.png
	images/hourglass_white.png
	images/tick_dark.png
	images/tick_white.png
	mobile/include/style/main.css
	mobile/operation/agent.php
	mobile/operation/events.php: Improvements in event 
	viewer of mobile console after fix some conflictive 
	code

2013-11-27  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_modules.php: Fixed that some multibyte characters
	are recognized as invalid characters on module creation.

2013-11-26  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php
	mobile/include/style/main.css: Improve events layout
	and fix events validation 
	
	* include/functions_events.php
	include/functions_api.php: Fix event validation from API
	and delete deprecated function

2013-11-26  KIKUCHI Koichiro <koichiro@rworks.jp>

	* extensions/insert_data.php: Use UTF-8 for output XML encoding.

2013-11-26  KIKUCHI Koichiro <koichiro@rworks.jp>
